SDKs/swig/Examples/test-suite/errors/swig_insert_bad.i
version https://git-lfs.github.com/spec/v1
oid sha256:9845ff8f35361cb5acad68e52cfd3c5e52f9d0501c8ef1aa836e1296520adcd4
size 47
